--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.1.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
