--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.16.0",
+    "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
