--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.16.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.513.0",
+    "npm": "^10.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -22,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "tailwind-scrollbar": "^3.1.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
